<resources>
    <string name="export_file_extension">.arbook</string>
    <string name="app_name">AR Auth Tool</string>
    <string name="menu_create_book">Criar Livro</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_cancel">Descartar</string>
    <string name="menu_save">Salvar</string>
    <string name="menu_delete">Deletar</string>

    <string name="edit_book">Editar Livro</string>
    <string name="edit_lesson">Editar Lição</string>
    <string name="edit_lesson_item">Editar Item</string>
    <string name="book_name_default">Novo Livro</string>
    <string name="et_book_name_hint">Aqui vem o nome do seu livro</string>
    <string name="et_lesson_name_hint">Qual o nome dessa lição?</string>
    <string name="lesson_edit_title">Editar Lição</string>
    <string name="lesson_item_edit_explanation">Escolha o tipo de informação que você quer guardar\nVoce pode escolher entre colar um item da internet ou copiar um arquivo </string>
    <string name="lesson_item_name_hint">Nome do Item</string>
    <string name="lesson_item_content_hint">Cole uma página web aqui ou escolha um arquivo</string>
    <string-array name="list_item_types">
        <item>Internet URL</item>
        <item>Arquivo</item>
    </string-array>
    <string name="paste">colar</string>
    <string name="pick_file">Escolher Arquivo</string>
    <string name="do_not_have_books">Você ainda não tem nenhum livro, Clique no + abaixo e adicione algum</string>
    <string name="do_not_have_lessons">Este livro ainda nao tem nenhuma lição, adicione algumas abaixo</string>
    <string name="do_not_have_lesson_itens">Essa lição continua vazia, adicione algo!</string>
    <string name="sure_want_to_delete">Tem certeza que vai deletar?</string>
    <string name="lesson_item_lost_forever">Esse item jamais poderá ser recuperado</string>
    <string name="book_lost_forever">O livro será perdido para sempre</string>
    <string name="lesson_lost_forever">A lição será perdida para sempre</string>
    <string name="cancel">Cancelar</string>
    <string name="sure_want_to_cancel">Descartar alterações?</string>
    <string name="changes_will_not_be_saved">Todas as suas alterções não salvas serão descartadas</string>
    <string name="saving_title">Salvando Livro</string>
    <string name="saving_message">Por favor, espere</string>
    <string name="menu_share">Compartilhar</string>
    <string name="share_using">Compartilhar usando...</string>
    <string name="exporting_title">Preparando para exportar</string>
    <string name="exporting_message">Por favor, espere</string>
    <string name="something_wrong">Se você está vendo essa tela, alguma coisa deu errado:\nPor favor, volte e tente novamente</string>
    <string name="menu_import_book">Importar Livro</string>
    <string name="importing_title">Importando livro</string>
    <string name="importing_message">@string/saving_message</string>
    <string name="kudan_api">gcHUoWNeJTjZ6Cboz7OtIFD/be8kfAPJ46ElM8iJCJjUeHaRTPCIuIjFRqvicN92PC/haijxLhZe9CQjeQcyMzQknb9vUwyMnInc9hGpg2dgC97cE0tl3t63dwi7T8Qp9GtCRFrLJHY1ocrEYmRwBp0gJibc0MGb2mfmOS4169FJOK6L465DJKKdDNs8UXSA5t0nq+QrgX06Qe+Bl9x5gqn19W24kr0wdx/aoXG/q/EPcom1etAXI+109jExzQ4EIs5a54k1EIM+0Dk9I+9IOVC9CeqGpZ48yJYqe7DqnrjOea4kQtsI2glhPf8kGdJ1az/FiJZo4L7F7RMtgIzvwW9ILm2EjTUf2JFV3hA+hfzrFVRjpHtU/ItxgD1dD1tygB9MVThFrwcTf5V4T9X0nKEbKN/X6aS/jOYa0QPMj/VLEpqdOPscNkKoKAd/V1F+c7b6fcmv3+opID2NBRTDBQmOL0Wx20YP2Uz2eC/8WtkTDksqruivMmBa4+bbj6unQ44N8fV63wmIHSv+nLgMZ1Jb61/jmfKxnn4R/eKsOQbEhp0ntI77hHfrZJtjUiY5WpgHjN08Fc0PJ899H6A6xMvEpKodmEa79IJZ91NKs9NrWlAc2JgZ8DSjvbOifIEiY0LhSsUTkQZ9Jcj68KL35zDTUjBaOZ0B9QWpCFZKRqc=</string>

</resources>
