<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="0"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="2"
        android:title="@string/menu_delete"
        app:showAsAction="never"></item>

</menu>